// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper Text should render danger text with danger icon if dange variant is specified 1`] = `
<scale-helper-text variant="danger">
  <mock:shadow-root>
    <div class="helper-text helper-text--danger" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-error></scale-icon-alert-error>
    </div>
  </mock:shadow-root>
  danger
</scale-helper-text>
`;

exports[`Helper Text should render informational helper text with info icon if informational variant is specified 1`] = `
<scale-helper-text variant="informational">
  <mock:shadow-root>
    <div class="helper-text helper-text--informational" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-information></scale-icon-alert-information>
    </div>
  </mock:shadow-root>
  informational
</scale-helper-text>
`;

exports[`Helper Text should render informational helper text with info icon if no variant is specified 1`] = `
<scale-helper-text>
  <mock:shadow-root>
    <div class="helper-text helper-text--informational" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-information></scale-icon-alert-information>
    </div>
  </mock:shadow-root>
  informational
</scale-helper-text>
`;

exports[`Helper Text should render neutral text without icon if neutral variant is specified 1`] = `
<scale-helper-text variant="neutral">
  <mock:shadow-root>
    <div class="helper-text helper-text--neutral" part="base">
      <span part="text">
        <slot></slot>
      </span>
    </div>
  </mock:shadow-root>
  neutral
</scale-helper-text>
`;

exports[`Helper Text should render success text with success icon if success variant is specified 1`] = `
<scale-helper-text variant="success">
  <mock:shadow-root>
    <div class="helper-text helper-text--success" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-success></scale-icon-alert-success>
    </div>
  </mock:shadow-root>
  success
</scale-helper-text>
`;

exports[`Helper Text should render warning text with warning icon if warning variant is specified 1`] = `
<scale-helper-text variant="warning">
  <mock:shadow-root>
    <div class="helper-text helper-text--warning" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-information></scale-icon-alert-information>
    </div>
  </mock:shadow-root>
  warning
</scale-helper-text>
`;
